Bug 938312 - Wrong orientation when starting browser in landscape mode. r=kats